--- a/Kiznic/res/layout/activity_main.xml
+++ b/Kiznic/res/layout/activity_main.xml
@@ -46,23 +46,28 @@
 	                
             </LinearLayout>
             
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dip"
-                android:layout_weight="3"
-                android:background="@drawable/condition_seekbar_background_image">
+                android:layout_weight="3">
  					
-                    <SeekBar android:id="@+id/condition_range_seekbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dip"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginRight="20dip"
-                        android:max="4"
-                        android:progress="0"
-       					android:secondaryProgress="0"
-                        android:progressDrawable="@drawable/seekbar_progress"
-                        android:thumb="@null"/> 
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/main_seekbar_background"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"/>
+                
+                <SeekBar android:id="@+id/condition_range_seekbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dip"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="20dip"
+                    android:max="4"
+                    android:progress="0"
+       				android:secondaryProgress="0"
+                    android:progressDrawable="@drawable/seekbar_progress"
+                    android:thumb="@null"/> 
+            </RelativeLayout>
         </LinearLayout>
         
         
