--- a/Kiznic/res/layout/activity_search.xml
+++ b/Kiznic/res/layout/activity_search.xml
@@ -48,8 +48,7 @@
 		            android:layout_height="match_parent"
 		            android:padding="5dip"
 		            android:layout_centerHorizontal="true"
-		            android:layout_alignParentRight="true"
-		            android:src="@drawable/search_button" />
+		            android:layout_alignParentRight="true"/>
 	            
 	        </LinearLayout>
 	
