e-mail 전송 기능, 메인 원스탑 안전 신고 기능 추가

--- a/Kiznic/res/layout/list_item_weather_card.xml
+++ b/Kiznic/res/layout/list_item_weather_card.xml
@@ -271,6 +271,7 @@
 		                 android:layout_weight="1">
 		                 
 		                 <TextView
+		                 android:id="@+id/weather_humidity_text"
 				         android:layout_width="wrap_content"
 				         android:layout_height="wrap_content"
 				         android:layout_gravity="center_vertical"
